--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp build",
+    "dist": "NODE_ENV=production gulp dist",
     "watch": "gulp watch"
   },
   "author": "Falk Hoppe <falkhoppe81@gmail.com>",
