--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp build",
     "dist": "NODE_ENV=production gulp dist",
+    "deploy": "NODE_ENV=production gulp deploy",
     "watch": "gulp watch"
   },
   "author": "Falk Hoppe <falkhoppe81@gmail.com>",
