--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-filter-by": "^1.2.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-image": "^2.1.0",
     "gulp-plumber": "^1.1.0",
