--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Falk Hoppe <falkhoppe81@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "gulp-gzip": "^1.4.0",
     "standard": "^7.1.2"
   },
   "dependencies": {
