re-add rev manifest

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "README.md",
     "LICENSE.md",
     "index.js",
+    "rev-manifest.json",
     "lib/",
     "templates/",
     "images/favicons/favicon.ico"
