--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "niehues-assets",
+  "name": "niehues-assets-dup",
   "version": "0.0.15",
   "description": "",
   "main": "index.js",
